deleting book functionality
